# tiny-agents

./: .ignore  .pre-commit-config.yaml  LICENSE  README.md  USAGE.md  pyproject.toml  tox.ini
examples/: ex_01_simple.py  ex_02_multiturn.py  ex_03_tool.py  ex_04_agent_loop.py
src/llmini/completion/: complete.py  tracking.py
src/llmini/messages/: __init__.py  make_message.py  media.py  metadata.py  tools.py  utils.py
src/llmini/structured/: schema.py
src/llmini/tools/: decorator.py  docstring.py  utils.py
src/tiny_agents/: __init__.py
src/tiny_agents/completion/: __init__.py  utils.py
src/tiny_agents/config/: __init__.py  config.py
src/tiny_agents/messages/: deserialize.py  messages.py  serialize.py
src/tiny_agents/structured/: __init__.py  coerce.py  complete.py
src/tiny_agents/tools/: __init__.py  decorator.py  errors.py  schema.py  types.py  utils.py
tests/: test_basic.py
tests/completion/: test_utils.py
tests/messages/: test_make_message.py  test_messages.py  test_serialize.py
tests/structured/: test_coerce.py  test_schema.py
tests/tools/: test_docstring.py  test_schema.py  test_utils.py
