[project]
name = "tiny-agents"
version = "1.0.0"
description = "A minimal, ergonomic Python library for interacting with LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "litellm>=1.81.8",
  "pillow>=12.1.0",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
  "debugpy>=1.8.20",
  "mypy>=1.17.0",
  "pdoc>=16.0.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.15.0",
  "tox>=4.28.1",
  "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["tiny_agents"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.tox]
env_list = ["fmt", "lint", "typecheck", "test"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
basepython = "python3.12"
uv = true
uv_sync = true
uv_resolution = "lowest-direct"
allowlist_externals = ["ruff", "mypy", "pytest"]

[tool.tox.env.fmt]
description = "Format code with ruff"
commands = [["ruff", "format", "src/", "tests/"]]

[tool.tox.env.lint]
description = "Lint code with ruff"
commands = [["ruff", "check", "src/", "tests/", "--fix"]]

[tool.tox.env.typecheck]
description = "Type-check with mypy"
commands = [["mypy", "src/tiny_agents/"]]

[tool.tox.env.test]
description = "Run tests with coverage"
commands = [
  [
    "pytest",
    "--cov=tiny_agents",
    "--cov-report=term-missing",
    "--cov-report=html",
    "tests/"
  ],
]

[tool.uv]
package = true
